--- a/timingframework-android/res/layout/main.xml
+++ b/timingframework-android/res/layout/main.xml
@@ -17,6 +17,12 @@
             android:text="@string/demo_tsr" />
 
         <Button
+            android:id="@+id/button_race_b"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/demo_race_b" />
+
+        <Button
             android:id="@+id/button_tmb"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
